--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -122,6 +122,9 @@ input[data-autocompleted] {
     flex-direction: column;
     gap: 39px;
     margin-top: 15px;
+
+    flex: unset !important; /* ignore headNavigation > div flex style */
+    width: 60%;
 }
 
 #allResultsDropShadow {
@@ -297,6 +300,11 @@ input[data-autocompleted] {
 
 #mobileBurgerMenuIcon {
     display: none;
+    cursor: pointer;
+}
+
+#burgerMenuLinkListBungie, #burgerMenuClose {
+    cursor: pointer;
 }
 
 #mobileBurgerMenu {
@@ -305,6 +313,7 @@ input[data-autocompleted] {
 
 #tabGroupsAndControlsWrapper {
     width: 100%;
+    height: 90px; /* height of tabGroupsAndControlsWrapper */
     position: sticky;
     top: 0;
     z-index: 2;
